--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ p {
 	margin: .5em 0;
 }
 
-#switcher {
+#switcher, #color {
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -24,7 +24,8 @@ p {
 	align-items: center;
 }
 
-#switcher li {
+
+#switcher li, #color li {
 	width: 2rem;
 	line-height: 2rem;
 	border: 1px dotted;
@@ -32,15 +33,18 @@ p {
 	cursor: pointer;
 }
 
+.red {
+	background-color: red;
+
+} 
+.blue {
+	background-color: blue;
+}
+.green{
+	background-color: green;
+}
+
 #switcher li:hover {
 	background: tomato;
-}
-
-.smaller {
-	font-size: smaller;
-}
-
-.bigger {
-	font-size: larger;
 }
 
